--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,9 @@ jobs:
       run: ruff check .
 
     - name: Run Pytest
-      run: pytest
+      run: |
+        export PYTHONPATH=$GITHUB_WORKSPACE/src
+        pytest src/tests/
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
