--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,10 @@ services:
     restart: always
     ports:
       - "80:80"
+      - "443:443"
+    volumes:
+      - /var/www/certbot:/var/www/certbot
+      - /etc/letsencrypt:/etc/letsencrypt
+      - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - fastapi-app
