--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,27 @@
+version: '3.8'
+
 services:
   fastapi-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: ${DOCKER_IMAGE_NAME}:latest
-    container_name: fastapi-app
-    restart: always
-    expose:
-      - "80"
+    image: arpankumar1119/bajajfinsev-fastapi:latest
+    container_name: fastapi-app-container
+    command: ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
 
   nginx:
-    build:
-      context: ./config/nginx
-      dockerfile: Dockerfile
-    image: ${DOCKER_IMAGE_NAME}-nginx:latest
-    container_name: nginx-proxy
-    restart: always
+    image: arpankumar1119/bajajfinsev-fastapi-nginx:latest
+    container_name: nginx-container
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - /var/www/certbot:/var/www/certbot
-      - /etc/letsencrypt:/etc/letsencrypt
-      - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
     depends_on:
       - fastapi-app
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot-container
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
