--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -33,7 +33,9 @@ http {
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
         location / {
-            proxy_pass http://fastapi-app:8000;
+            resolver 127.0.0.11 valid=30s;
+            set $upstream_host fastapi-app;
+            proxy_pass http://$upstream_host:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
