feat: Implement document ingestion service with embeddings and summarization

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Database Configuration
 DATABASE_URL=postgresql://user:password@localhost:5432/bajaj_finsev_db
 
-# Pinecone Configuration (for Task 2.4)
+# Pinecone Configuration
 PINECONE_API_KEY=your_pinecone_api_key_here
-PINECONE_ENVIRONMENT=your_pinecone_environment_here
+PINECONE_INDEX_NAME=bajaj-legal-docs
 
-# OpenAI Configuration (for Task 2.4)
+# OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
