--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ ruff==0.5.0
 sqlalchemy==2.0.30
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
+aiohttp==3.9.5
+spacy==3.7.5
+sentence-transformers==3.0.1
+pinecone-client==4.1.1
+openai==1.35.3
