optimize: Enhance security, error handling, and database performance

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,17 @@
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
-API_KEY=
-
 # Database Configuration
 DATABASE_URL=postgresql://user:password@localhost:5432/bajaj_finsev_db
+
+# API Authentication
+API_KEY=your_secure_api_key_here
+
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key_here
 
 # Pinecone Configuration
 PINECONE_API_KEY=your_pinecone_api_key_here
 PINECONE_INDEX_NAME=bajaj-legal-docs
 
-# OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# AWS Configuration (Optional - for OCR fallback)
+AWS_ACCESS_KEY_ID=your_aws_access_key_here
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
+AWS_REGION=us-east-1
