Add Task2 folders and API files

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,87 @@
-# Ignore Python virtual environment
-.venv/
-env/
-
-# Ignore compiled Python files
 __pycache__/
-*.pyc
-
-# Ignore IDE files
-.idea/
-.vscode/
-
-# Ignore Docker-related files
-.dockerignore
-
-# Ignore sensitive files
-*.pem
-
-# Ignore build artifacts
+*.py[cod]
+*$py.class
+*.so
+.Python
 build/
+develop-eggs/
 dist/
-
-# Ignore logs
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+*.manifest
+*.spec
+pip-log.txt
+pip-delete-this-directory.txt
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+*.mo
+*.pot
 *.log
-
-BajajFinsevHarckRx_key.pem
-swappy-20250725-150151.png
-
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+instance/
+.webassets-cache
+.scrapy
+docs/_build/
+target/
+.ipynb_checkpoints
+profile_default/
+ipython_config.py
+.python-version
+Pipfile.lock
+__pypackages__/
+celerybeat-schedule
+celerybeat.pid
+*.sage.py
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+.spyderproject
+.spyproject
+.ropeproject
+/site
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
+ssl/
+*.pem
+*.key
+*.crt
+logs/
+*.log
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
