--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
-fastapi==0.111.0
-uvicorn==0.30.1
-pytest==8.2.2
-ruff==0.5.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+pydantic[email]==2.5.0
+python-multipart==0.0.6
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.25.2
+black==23.11.0
+isort==5.12.0
+flake8==6.1.0
+gunicorn==21.2.0
+requests==2.31.0
+python-dotenv==1.0.0
