first implemenation of RAG workflow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,39 @@
-version: '3.8'
-
 services:
   fastapi-app:
     build: .
     container_name: fastapi-app-container
-    command: ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
+    command: ["sh", "-c", "alembic upgrade head && uvicorn src.main:app --host 0.0.0.0 --port 8000"]
     ports:
       - "8000:8000"
     environment:
+      # This DATABASE_URL is for container-to-container communication
+      - DATABASE_URL=postgresql://user:password@postgres:5432/bajaj_finsev_db
+      - API_KEY=${API_KEY}
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - GROQ_API_KEY=${GROQ_API_KEY}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_REGION=${AWS_REGION}
-      - API_KEY=${API_KEY}
-      - DATABASE_URL=${DATABASE_URL}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
       - PINECONE_API_KEY=${PINECONE_API_KEY}
       - PINECONE_INDEX_NAME=${PINECONE_INDEX_NAME}
     volumes:
       - ./src:/app/src
+    depends_on:
+      - postgres
+    restart: unless-stopped
+
+  postgres:
+    image: postgres:15-alpine
+    container_name: postgres-db
+    environment:
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=bajaj_finsev_db
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      # Maps the container's port 5432 to your local machine's port 5432
+      - "5432:5432"
     restart: unless-stopped
 
   nginx:
@@ -26,9 +42,13 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/sites-available:/etc/nginx/sites-available
       - ./ssl:/etc/nginx/ssl
       - /etc/letsencrypt:/etc/letsencrypt
     depends_on:
       - fastapi-app
     restart: unless-stopped
+
+volumes:
+  postgres_data:
