--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,10 @@ PINECONE_INDEX_NAME=bajaj-legal-docs
 AWS_ACCESS_KEY_ID=your_aws_access_key_here
 AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
 AWS_REGION=us-east-1
+
+
+curl -X POST "http://127.0.0.1:8000/api/v1/hackrx/run" \
+       -H "Content-Type: application/json" \
+       -H "Authorization: Bearer 12345678901" \
+       -d @payload.json
+
