--- a/nginx/sites-available/llmnew.dev.conf
+++ b/nginx/sites-available/llmnew.dev.conf
@@ -1,7 +1,7 @@
 limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
 
-upstream rag_api {
-    server rag-api:8000;
+upstream fastapi-app {
+    server fastapi-app:8000;
     keepalive 32;
 }
 
@@ -43,10 +43,10 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header Referrer-Policy "strict-origin-when-cross-origin";
 
-    location /hackrx/ {
+    location /api/v1/ {
         limit_req zone=api_limit burst=20 nodelay;
         
-        proxy_pass http://rag_api;
+        proxy_pass http://fastapi-app;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -62,7 +62,7 @@ server {
     }
 
     location ~ ^/(docs|redoc|openapi.json) {
-        proxy_pass http://rag_api;
+        proxy_pass http://fastapi-app;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -71,14 +71,14 @@ server {
     }
 
     location /health {
-        proxy_pass http://rag_api;
+        proxy_pass http://fastapi-app;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         access_log off;
     }
 
     location / {
-        proxy_pass http://rag_api;
+        proxy_pass http://fastapi-app;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
