--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,5 +38,6 @@ http {
 
     limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
 
-    include /etc/nginx/sites-available/*;
+    # Changed from sites-available to conf.d to match Docker volume mount
+    include /etc/nginx/conf.d/*.conf;
 }
