--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,6 +38,13 @@ http {
 
     limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
 
-    # Changed from sites-available to conf.d to match Docker volume mount
+    # SSL/TLS Configuration
+    ssl_session_cache shared:le_nginx_SSL:10m;
+    ssl_session_timeout 1440m;
+    ssl_session_tickets off;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
+    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
+
     include /etc/nginx/conf.d/*.conf;
 }
