--- a/nginx/sites-available/llmnew.dev.conf
+++ b/nginx/sites-available/llmnew.dev.conf
@@ -6,22 +6,12 @@ server {
     listen 80;
     server_name llmnew.dev www.llmnew.dev;
 
+    # Let's Encrypt challenge location
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-server {
-    listen 443 ssl;
-    server_name llmnew.dev www.llmnew.dev;
-
-    ssl_certificate /etc/letsencrypt/live/llmnew.dev/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/llmnew.dev/privkey.pem;
-
+    # Proxy all other requests to FastAPI
     location / {
         proxy_pass http://fastapi;
         proxy_set_header Host $host;
