fixing nginx bugs A5

--- a/nginx/sites-available/llmnow.dev.conf
+++ b/nginx/sites-available/llmnow.dev.conf
@@ -4,20 +4,17 @@ upstream fastapi {
 
 server {
     listen 80;
-    server_name llmnew.dev www.llmnew.dev;
+    server_name llmnow.dev www.llmnow.dev;
 
-    # Let's Encrypt challenge location
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    # Proxy all other requests to FastAPI
     location / {
         proxy_pass http://fastapi;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        limit_req zone=api burst=20 nodelay;
     }
 }
