--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,20 +60,12 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/sites-available/llmnew.dev.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/sites-available/llmnow.dev.conf:/etc/nginx/conf.d/default.conf  # Updated filename
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
     depends_on:
       - fastapi-app
     restart: unless-stopped
-    networks:
-      - app-network
-
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
     networks:
       - app-network
 
