--- a/nginx/sites-available/llmnow.dev.conf
+++ b/nginx/sites-available/llmnow.dev.conf
@@ -11,10 +11,23 @@ server {
     }
 
     location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl http2;
+    server_name llmnow.dev www.llmnow.dev;
+
+    ssl_certificate /etc/letsencrypt/live/llmnow.dev/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/llmnow.dev/privkey.pem;
+
+    location / {
         proxy_pass http://fastapi;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        limit_req zone=api burst=20 nodelay;
     }
 }
