--- a/nginx/sites-available/llmnow.dev.conf
+++ b/nginx/sites-available/llmnow.dev.conf
@@ -29,6 +29,12 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Set a 2-minute timeout for long-running requests
+        proxy_connect_timeout 120s;
+        proxy_send_timeout 120s;
+        proxy_read_timeout 120s;
+        
         limit_req zone=api burst=20 nodelay;
     }
 }
