--- a/requirements.txt
+++ b/requirements.txt
@@ -79,6 +79,8 @@ idna==3.10
     #   anyio
     #   requests
     #   yarl
+lxml==6.0.0
+    # via python-docx
 multidict==6.6.3
     # via
     #   aiohttp
@@ -119,6 +121,8 @@ pydantic-settings==2.10.1
     # via -r requirements.in
 pyparsing==3.2.3
     # via httplib2
+python-docx==1.2.0
+    # via -r requirements.in
 python-dotenv==1.1.1
     # via
     #   -r requirements.in
@@ -150,6 +154,7 @@ typing-extensions==4.14.1
     #   google-generativeai
     #   pydantic
     #   pydantic-core
+    #   python-docx
     #   starlette
     #   typing-inspection
 typing-inspection==0.4.1
