nginx conf filter added

--- a/nginx/sites-available/llmnow.dev.conf
+++ b/nginx/sites-available/llmnow.dev.conf
@@ -23,18 +23,31 @@ server {
     ssl_certificate /etc/letsencrypt/live/llmnow.dev/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/llmnow.dev/privkey.pem;
 
+    # Common proxy settings for all locations
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_connect_timeout 300s;
+    proxy_send_timeout 300s;
+    proxy_read_timeout 300s;
+    limit_req zone=api burst=20 nodelay;
+
+    # Block common vulnerability scanners
+    location ~* /(wp-admin|wp-login|setup-config|cgi-bin|phpmyadmin|pma|luci) {
+        return 444;
+    }
+
+    # Specific location for the API endpoint to only allow POST
+    location = /api/v1/hackrx/run {
+        if ($request_method != POST) {
+            return 405;
+        }
+        proxy_pass http://fastapi;
+    }
+
+    # General location for all other requests
     location / {
         proxy_pass http://fastapi;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Set a 2-minute timeout for long-running requests
-        proxy_connect_timeout 300s;
-        proxy_send_timeout 300s;
-        proxy_read_timeout 300s;
-        
-        limit_req zone=api burst=20 nodelay;
     }
 }
